resources/assets/sass/sections/_filters-overlay.scss
.filter {
	cursor: pointer;
}

.filter-overlay-bg {
	background: $highlight;
	width: 20px;
	height: 20px;
	border-radius: 100%;
	display: block;
	position: fixed;
	transform: scale(0);
	z-index: 10;
}

.filter-overlay-nav {
	opacity: 0;
	display: none;
	position: fixed;
	left: 100px;
	top: 20%;
	z-index: 20;
	width: 100%;
}

.filter-overlay-nav.active {
	display: block;
}

.filter-overlay-nav li {
	margin-bottom: 1em;
	font: $heading--large;
	color: $white;
	transition: 0.2s ease-out color;

	&:hover {
		color: rgb(244,114,112);
		svg .st0 {
			fill: rgb(244,114,112);
		}
	}
}

.filter-overlay-nav li a {
	position: relative;
	padding-right: 1.55em;
    padding-left: 0.5em;
	color: inherit;
	text-decoration: none;
}

.filter-overlay-nav li svg {
	width: 1.4em;
	max-height: 1em;
	float: left;
	display: block;

	.st0 {
		fill: rgb(255,255,255);
		transition: 0.2s ease-out fill;
	}
}

.nav-num {
	font: $body--mono;
    width: 48px;
	position: absolute;
	right: 0;
	top: 0;
}

.nav-num-inner {
    opacity: 0;
    padding: 0 10px;
}

.nav-open-bracket, .nav-close-bracket {
    position: absolute;
    top: 0;
}

.nav-open-bracket {
    left: 0;
    transform:translateX(15px);
}

.nav-close-bracket {
	right: 0;
    transform:translateX(-15px);
}

